Setup uploader and a index page
